k8s/postgresql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nipris-postgres
  namespace: nipris-prod
spec:
  serviceName: nipris-postgres
  replicas: 2
  selector:
    matchLabels:
      app: nipris-postgres
  template:
    metadata:
      labels:
        app: nipris-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 100Gi
