k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nipris-ingress
  namespace: nipris-prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  tls:
    - hosts:
        - nipris.police.gov.ng
      secretName: nipris-tls-cert
  rules:
    - host: nipris.police.gov.ng
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: nipris-backend-service
                port:
                  number: 3001
